# logisticApp

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  map_loader.py  requirements.txt
backend/auth/: .dockerignore  .env.example  (+6 more)
backend/routing/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/routing/app/: config.py  main.py  map_loader.py  requirements.txt
backend/routing/app/analytics/: distribution.py  summary.py  timeseries.py
backend/routing/app/api/routes/: analytics.py  graph.py  router.py  routing.py
backend/routing/app/constants/: __init__.py  traffic.py
backend/routing/app/core/: config.py  graph.py  security.py
backend/routing/app/middlewares/: auth.py
backend/routing/app/ml/: dataset.py  model.py  test_model.py  traffic_model.py  train_model.py
backend/routing/app/routes/: analytics.py  api.py  graph.py  routing.py
backend/routing/app/routing/: alternative_route.py  alternatives.py  builder.py  main.py  main_route.py  response.py  route_builder.py  strategies.py  weights.py
backend/routing/app/schemas/: __init__.py  analytics.py  common.py  geo.py  graph.py  route.py  traffic.py
backend/routing/app/services/: __init__.py  analytics_service.py  graph_service.py  response_builder.py  routing_service.py
backend/routing/app/types/: __init__.py  common.py  geo.py  graph.py  route.py
backend/routing/app/utils/: geojson_utils.py  graph_utils.py  route_utils.py  time_utils.py  traffic_utils.py
(+354 files in other folders)
