[project]
name = "routing"
version = "0.1.0"
description = "Backend-сервис для организации формирования маршрутов"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.1",
    "joblib==1.5.2",
    "networkx==3.5",
    "numpy==2.3.3",
    "osmnx==2.0.6",
    "pydantic==2.11.7",
    "pydantic-settings>=2.14.0",
    "pyjwt==2.8.0",
    "python-dotenv==1.1.1",
    "scikit-learn==1.7.2",
    "shapely==2.1.1",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
